# Django-HW

./: README.md  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
